<resources>
    <string name="app_name">BookCita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Text LOGIN -->
    <string name="profile">Profile</string>
    <string name="image_has_been_deleted">The picture has been deleted</string>
    <string name="add_avatar_from_gallery">Select an avatar from the gallery</string>
    <string name="add_avatar_from_camera">Take a picture</string>

    <!-- String pour la decription pour l'aide aux déficients visuels   -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- String pour l'alertDialog supprimerCitation  -->
    <string name="dialog_supprimer_citation">Do you really want to delete this quote?</string>

    <!-- String pour l'alertDialog supprimerCitation  -->
    <string name="dialog_supprimer_livre">Do you really want to delete this book?</string>

    <string name="cancel">Cancel</string>
    <string name="my_books">My books</string>
    <string name="delete">Delete</string>
    <string name="no_internet">Check you internet connection</string>
    <string name="loading_please_wait">Please wait, loading...</string>
    <string name="login_failed">Connection failure : %1$s</string>
    <string name="resend_timer">Resend in : %1$s</string>
    <string name="failed_to_send_email">Failed to send the email : %1$s</string>
    <string name="close">Close</string>
    <string name="retry">Try again</string>
    <string name="reset_password_instructions">The steps to reinitialize the password  have been sent by email : %1$s</string>
    <string name="something_went_wrong">Something went wrong : %1$s</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="change_password">Change password</string>
    <string name="profile_updated">Profile updated</string>
    <string name="change_name_successfully">Name changed successfully</string>
    <string name="avatar_deleted_succesfully">Avatar deleted successfully</string>
    <string name="delete_avatar">Delete avatar</string>
    <string name="change_avatar">Change avatar</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="access_permission_is_required">Access permission is required</string>
    <string name="nameUpdateFailed">Name update failed</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="signup_failed">Sign up failed : %1$s</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="enter_correct_email">Enter correct email</string>
    <string name="signup">Sign up</string>
    <string name="enter_name">Enter name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_password">Reset password</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="app_s_logo">App\'s logo</string>
    <string name="enter_email">Enter email</string>
    <string name="all">All</string>
    <string name="in_progress">In progress</string>
    <string name="read">Read</string>
    <string name="to_read">To read</string>
    <string name="later">Later</string>
    <string name="search_in_my_books">Search in my books</string>
    <string name="search">Search</string>
    <string name="search_a_book">Search a book</string>
    <string name="add_manually">Add manually</string>
    <string name="advanced_search">Advanced search</string>
    <string name="my_quotes">My quotes</string>
    <string name="search_in_my_quotes">Search in my quotes</string>
    <string name="books_with_quotes">Books with quotes</string>
    <string name="home">Home</string>
    <string name="welcome_home">"Welcome "</string>
    <string name="exclamation_mark">!</string>
    <string name="opening_sentence_home">You don\'t remember where a quote comes from? No problem! BookCita is here to help you find easily your quotes.</string>
    <string name="last_added_book">Last added book</string>
    <string name="book_added_on">"Book added on : "</string>
    <string name="last_added_quote">Last added quote</string>
    <string name="quote_added_on">"Quote added on : "</string>
    <string name="at_home">" at "</string>
    <string name="number_of_quotes">"Number of quotes : "</string>
    <string name="add_a_quote">Add a quote</string>
    <string name="manual_input">Manual input</string>
    <string name="ocr_scan">OCR scan</string>
    <string name="txt_file_import">Txt file import</string>
    <string name="quote_details">Quote details</string>
    <string name="page">"Page : "</string>
    <string name="quote">"Quote : "</string>
    <string name="note">"Note : "</string>
    <string name="update_quote">Update quote</string>
    <string name="delete_quote">Delete quote</string>
    <string name="book_details">Book details</string>
    <string name="language">"Language : "</string>
    <string name="none_BoD">None</string>
    <string name="read_BoD">Read</string>
    <string name="add_quote">Add quote</string>
    <string name="update_book">Update book</string>
    <string name="delete_book">Delete book</string>
    <string name="summary">Summary :</string>
    <string name="isbn">"ISBN : "</string>
    <string name="quote_import">Quote import</string>
    <string name="choose_txt_file">Choose a txt file</string>
    <string name="quotes_from_one_book">Quotes from one book</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="published_date">Published date</string>
    <string name="isbn_alone">ISBN</string>
    <string name="page_count">Page count</string>
    <string name="summary_alone">Summary</string>
    <string name="language_alone">Language</string>
    <string name="search_book_by_keyword">Search a book by keyword</string>
    <string name="isbn_13_digits">ISBN (13 digits)</string>
    <string name="language_AS">Language (en/fr/de)</string>
    <string name="quote_manual_input">Quote manual input</string>
    <string name="validate">Validate</string>
    <string name="book_manual_input">Book manual input</string>
    <string name="date_format">JJ/MM/AAAA</string>
    <string name="_13_digits">13 digits</string>
    <string name="cover_picture">Cover picture</string>
    <string name="choose_file">Choose a file</string>
    <string name="OCR_scan_quote_selection">OCR scan quote selection</string>
    <string name="copy_quote_extract">Please copy the quote you would like to extract</string>
    <string name="paste_it_here">"Paste it here : "</string>
    <string name="validate_selection">Validate selection</string>
    <string name="quotes">Quotes</string>
    <string name="fetching_data">Fetching Data...</string>
    <string name="t_OCR_scan">OCR scan</string>
    <string name="pic_capture_failed">"Pic capture failed : "</string>
    <string name="t_permissions_not_granted_by_user">Permissions not granted by the user.</string>
    <string name="t_ISBN_not_recognized">ISBN not recognized</string>
    <string name="t_scanned_ISBN">"Scanned ISBN : "</string>
    <string name="t_OCR_succeeded">OCR succeeded!</string>
    <string name="t_OCR_failed">OCR failed!</string>
    <string name="t_error">"Error : "</string>
    <string name="t_flag_updated_successfully">Flag updated successfully!</string>
    <string name="t_failed_to_update_flag">"Failed to update flag : "</string>
    <string name="add_to_my_books">Add to my books</string>
    <string name="t_please_grant_access_read_files">Plesae grant the access to read files.</string>
    <string name="t_please_grant_access_write_files">Please grant the access to write files.</string>
    <string name="t_please_check_app_permissions">Please check app permissions.\\n</string>
    <string name="t_choose_txt_file">Choose a txt file</string>
    <string name="t_error_import_quotes_from_txt_file">Falied to import quotes and notes from txt file.\\n</string>
    <string name="t_quotes_and_notes_imported_successfully">" quote(s) and note(s) imported successfully.\\n"</string>
    <string name="t_please_enter_page_number">Please enter a page number.</string>
    <string name="t_please_enter_quote">Please enter a quote.</string>
    <string name="t_quote_updated_successfully">Quote updated successfully.</string>
    <string name="t_please_enter_title">Please enter a title.</string>
    <string name="t_please_choose_language">Please choose a language between \'en\', \'fr\' and \'de\'.</string>
    <string name="t_book_updated_successfully">Book updated successfully.</string>
    <string name="t_failed_to_load_picture">"Failed to load the picture : "</string>
    <string name="t_please_check_internet_connection">Please check your internet connection.\\n</string>
    <string name="t_failed_save_quote">Failed to save the quote.\\n</string>
    <string name="t_quote_saved_successfully">Quote saved successfully.</string>
    <string name="t_please_enter_date">Please enter a date with following format : DD/MM/YYYY or MM/YYYY or YYYY or no date.</string>
    <string name="t_failed_loading_picture">"Failed loading picture : "</string>
    <string name="t_book_already_exists">This book already exists in database. Please enter another ISBN.</string>
    <string name="t_book_added_successfully">Book added successfully!</string>
    <string name="t_please_paste_quote">Please paste a quote in the provided textfield.</string>
    <string name="t_quote_deleted_successfully">Quote deleted successfully.</string>
    <string name="t_quote_deletion_canceled">Quote deletion canceled.</string>
    <string name="t_book_deleted_successfully">Book deleted successfully.</string>
    <string name="t_book_deletion_canceled">Book deletion canceled.</string>
    <string name="t_error_connection">"Connection error : "</string>
    <string name="t_error_meilisearch">"Meilisearch error : "</string>
    <string name="t_please_allow_internet_permission">Please allow internet permission.</string>
    <string name="default_message_NLAQ">You don\'t have any quote yet. You can add one by selecting one of your books and by clicking on \'add quote\'.</string>
    <string name="default_message_NLAB">You don\'t have any book yet. You can add one by clicking on the \'search\' tab and finding one book there.</string>


</resources>
