<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SaisieManuelleLivreActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLivre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greige"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/titre_barre_top" />

        <TextView
            android:id="@+id/tvTitreSaisieML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/book_manual_input"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerLivre">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etTitreSML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginBottom="-10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@id/textView31"
                    app:layout_constraintStart_toEndOf="@+id/textView31" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/author"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/textView31"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />

                <EditText
                    android:id="@+id/etAuteurSML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginBottom="-10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@id/textView32"
                    app:layout_constraintStart_toEndOf="@+id/textView32" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/published_date"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/textView32"
                    app:layout_constraintTop_toBottomOf="@+id/textView32" />

                <EditText
                    android:id="@+id/etDateSML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginBottom="-10dp"
                    android:ems="10"
                    android:hint="@string/date_format"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView33"
                    app:layout_constraintStart_toEndOf="@+id/textView33" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/publisher"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/textView33"
                    app:layout_constraintTop_toBottomOf="@+id/textView33" />

                <EditText
                    android:id="@+id/etEditeurSML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginBottom="-10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView34"
                    app:layout_constraintStart_toEndOf="@+id/textView34" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/page_count"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/textView34"
                    app:layout_constraintTop_toBottomOf="@+id/textView34" />

                <EditText
                    android:id="@+id/etNbPagesSML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginBottom="-10dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView35"
                    app:layout_constraintStart_toEndOf="@+id/textView35" />

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/language_alone"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/textView35"
                    app:layout_constraintTop_toBottomOf="@+id/textView35" />

                <AutoCompleteTextView
                    android:id="@+id/actvLangueSML"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginBottom="-10dp"
                    android:autoText="false"
                    android:popupTheme="@style/Theme.AppCompat"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView36"
                    app:layout_constraintStart_toEndOf="@+id/textView36" />

                <EditText
                    android:id="@+id/etIsbnSML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginBottom="-10dp"
                    android:ems="10"
                    android:hint="@string/_13_digits"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView37"
                    app:layout_constraintStart_toEndOf="@+id/textView37" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/isbn_alone"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/textView36"
                    app:layout_constraintTop_toBottomOf="@+id/textView36" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/cover_picture"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/textView37"
                    app:layout_constraintTop_toBottomOf="@+id/textView37" />

                <Button
                    android:id="@+id/btnChooseFileSML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_validation"
                    android:text="@string/choose_file"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/textView38"
                    app:layout_constraintTop_toBottomOf="@+id/textView38" />

                <ImageView
                    android:id="@+id/ivCoverSML"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/textView38"
                    app:layout_constraintTop_toBottomOf="@+id/btnChooseFileSML"
                    app:srcCompat="@drawable/ic_books_bottom_bar_24" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/summary_alone"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/ivCoverSML"
                    app:layout_constraintTop_toBottomOf="@+id/ivCoverSML" />

                <EditText
                    android:id="@+id/etmlResumeSML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textView39"
                    app:layout_constraintTop_toBottomOf="@+id/textView39" />

                <Button
                    android:id="@+id/btValiderSML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_validation"
                    android:text="@string/validate"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etmlResumeSML" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>