<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideInset"
    tools:context=".fragment.RechercherFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView8R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/greige"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/titre_barre_top" />

            <TextView
                android:id="@+id/tvTitreEcranR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/headerR">


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:padding="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/etKeyword"
                        android:layout_width="260dp"
                        android:layout_height="42dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/search_a_book"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textColorHint="#757575"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/btnClearText"
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:background="@android:drawable/ic_delete"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/btnRechScanISBN"
                        style="@style/FirebaseUI.VerifyPhoneButton"
                        android:layout_width="28dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:background="@drawable/barcode"
                        android:textStyle="bold"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAjoutManuelLivre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add_manually"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btnRechAvancee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="0"
                        android:text="@string/advanced_search"
                        android:textColor="@color/black" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvBookByKeyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</FrameLayout>